feat: def for metric find fix, array changed to list for best json info

--- a/homeworks/HW06/HW06.ipynb
+++ b/homeworks/HW06/HW06.ipynb
@@ -48,32 +48,34 @@
    "source": [
     "# Вспомогательные функции для эксперимента.\n",
     "\n",
+    "# - print_metrics: вывод метрик для Json\n",
     "# - compute_metrics: считает метрики (accuracy, F1, ROC-AUC при наличии вероятностей)\n",
     "# - evaluate_on_test: единообразная оценка модели на тесте\n",
     "# - save_json: аккуратное сохранение артефактов\n",
     "# - plot_confusion / plot_roc: быстрая диагностика качества\n",
     "\n",
-    "def compute_metrics(y_true, y_pred, y_proba=None) -> dict:\n",
-    "    m = {\n",
-    "        \"accuracy\": float(accuracy_score(y_true, y_pred)),\n",
-    "        \"f1\": float(f1_score(y_true, y_pred)),\n",
-    "    }\n",
+    "def print_metrics(y_true, y_pred, y_proba=None, title=None):\n",
+    "    if title:\n",
+    "        print(title)\n",
+    "    acc = accuracy_score(y_true, y_pred)\n",
+    "    f1 = f1_score(y_true, y_pred, average='macro')\n",
+    "    print(f\"accuracy = {acc:.4f}\")\n",
+    "    print(f\"f1       = {f1:.4f}\")\n",
     "    if y_proba is not None:\n",
     "        try:\n",
-    "            m[\"roc_auc\"] = float(roc_auc_score(y_true, y_proba))\n",
+    "            auc = roc_auc_score(y_true, y_proba, multi_class='ovr')\n",
+    "            print(f\"roc_auc  = {auc:.4f}\")\n",
     "        except Exception:\n",
-    "            m[\"roc_auc\"] = None\n",
-    "    else:\n",
-    "        m[\"roc_auc\"] = None\n",
-    "    return m\n",
+    "            pass\n",
+    "    return {\"accuracy\": float(acc), \"f1\": float(f1), \"roc_auc\": float(auc) if y_proba is not None else None}\n",
+    "\n",
     "\n",
     "def evaluate_on_test(model, X_test, y_test, label: str) -> dict:\n",
     "    pred = model.predict(X_test)\n",
     "    proba = None\n",
     "    if hasattr(model, \"predict_proba\"):\n",
     "        proba = model.predict_proba(X_test)[:, 1]\n",
-    "    metrics = compute_metrics(y_test, pred, proba)\n",
-    "    metrics[\"model\"] = label\n",
+    "    metrics = print_metrics(y_test, pred, proba, label)\n",
     "    return metrics\n",
     "\n",
     "def save_json(obj: dict, path: Path):\n",
@@ -102,7 +104,7 @@
     "    RocCurveDisplay.from_estimator(model, X_test, y_test)\n",
     "    plt.title(title)\n",
     "    plt.savefig(f'artifacts/figures/{file_name}.png')\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ]
   },
   {
@@ -743,11 +745,26 @@
    "execution_count": 6,
    "id": "4481d2a8-c9ec-4af6-8c29-17d2ba6b3b90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dummy(most_frequent)\n",
+      "accuracy = 0.7373\n",
+      "f1       = 0.4244\n",
+      "roc_auc  = 0.5000\n",
+      "LogReg(scaled)\n",
+      "accuracy = 0.8162\n",
+      "f1       = 0.7274\n",
+      "roc_auc  = 0.8009\n"
+     ]
+    }
+   ],
    "source": [
     "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=RANDOM_STATE)\n",
     "\n",
-    "results = []\n",
+    "results = {}\n",
     "best_models = {}  # label -> fitted best estimator\n",
     "search_summaries = {}  # label -> краткая инфа о подборе\n",
     "\n",
@@ -755,7 +772,7 @@
     "\n",
     "dummy = DummyClassifier(strategy=\"most_frequent\", random_state=RANDOM_STATE)\n",
     "dummy.fit(X_train, y_train)\n",
-    "results.append(evaluate_on_test(dummy, X_test, y_test, \"Dummy(most_frequent)\"))\n",
+    "results[\"Dummy(most_frequent)\"] = (evaluate_on_test(dummy, X_test, y_test, \"Dummy(most_frequent)\"))\n",
     "best_models[\"Dummy(most_frequent)\"] = dummy\n",
     "\n",
     "# 2.2 LogisticRegression baseline (с минимальным подбором)\n",
@@ -793,7 +810,7 @@
     "    \"best_cv_roc_auc\": float(lr_search.best_score_),\n",
     "}\n",
     "\n",
-    "results.append(evaluate_on_test(best_lr, X_test, y_test, \"LogReg(scaled)\"))"
+    "results[\"LogReg(scaled)\"] = (evaluate_on_test(best_lr, X_test, y_test, \"LogReg(scaled)\"))"
    ]
   },
   {
@@ -821,7 +838,7 @@
     "        \"best_params\": search.best_params_,\n",
     "        \"best_cv_roc_auc\": float(search.best_score_),\n",
     "    }\n",
-    "    results.append(evaluate_on_test(best, X_test, y_test, label))\n",
+    "    results[label] = (evaluate_on_test(best, X_test, y_test, label))\n",
     "    return search"
    ]
   },
@@ -831,6 +848,16 @@
    "id": "cac8e753-0c43-4efb-aaf1-fb7678ceb5df",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DecisionTree\n",
+      "accuracy = 0.8296\n",
+      "f1       = 0.7681\n",
+      "roc_auc  = 0.8419\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -845,16 +872,16 @@
    ],
    "source": [
     "# Decision Tree: одна модель дерева решений.\n",
-    "\n",
-    "dt = DecisionTreeClassifier(random_state=RANDOM_STATE)\n",
-    "\n",
-    "dt_grid = {\n",
+    "dt_params = {\n",
     "    \"max_depth\": [None, 1, 3, 5, 9, 10, 15],\n",
     "    \"min_samples_leaf\": [1, 3, 5, 10, 15, 20, 25, 30],\n",
     "    \"ccp_alpha\": [0.0, 0.001, 0.005, 0.01,],\n",
     "}\n",
     "\n",
-    "dt_search = run_search(\"DecisionTree\", dt, dt_grid)\n",
+    "dt = DecisionTreeClassifier(random_state=RANDOM_STATE)\n",
+    "\n",
+    "\n",
+    "dt_search = run_search(\"DecisionTree\", dt, dt_params)\n",
     "search_summaries[\"DecisionTree\"]"
    ]
   },
@@ -864,6 +891,16 @@
    "id": "7f131e6d-2e08-4d70-a1e6-17c338ce87c4",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForest\n",
+      "accuracy = 0.8922\n",
+      "f1       = 0.8449\n",
+      "roc_auc  = 0.9301\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -880,6 +917,11 @@
    ],
    "source": [
     "# Random Forest: ансамбль деревьев (bagging)\n",
+    "rf_params = {\n",
+    "    \"max_depth\": [None, 6, 10, 20],\n",
+    "    \"min_samples_leaf\": [1, 5, 10],\n",
+    "    \"max_features\": [\"sqrt\", 0.5],\n",
+    "}\n",
     "\n",
     "rf = RandomForestClassifier(\n",
     "    n_estimators=600,\n",
@@ -888,13 +930,7 @@
     "    oob_score=False\n",
     ")\n",
     "\n",
-    "rf_grid = {\n",
-    "    \"max_depth\": [None, 6, 10, 20],\n",
-    "    \"min_samples_leaf\": [1, 5, 10],\n",
-    "    \"max_features\": [\"sqrt\", 0.5],\n",
-    "}\n",
-    "\n",
-    "rf_search = run_search(\"RandomForest\", rf, rf_grid)\n",
+    "rf_search = run_search(\"RandomForest\", rf, rf_params)\n",
     "search_summaries[\"RandomForest\"]"
    ]
   },
@@ -904,6 +940,16 @@
    "id": "fb2277dd-2732-4cc6-b2a8-2af70ae39f48",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HistGradientBoosting\n",
+      "accuracy = 0.9084\n",
+      "f1       = 0.8750\n",
+      "roc_auc  = 0.9318\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -920,28 +966,69 @@
    ],
    "source": [
     "# HistGradientBoosting: градиентный бустинг по гистограммам\n",
+    "hgb_params = {\n",
+    "    \"learning_rate\": [0.03, 0.05, 0.1, 0.15, 0.01],\n",
+    "    \"max_depth\": [2, 3, None, 5, 10],\n",
+    "    \"max_leaf_nodes\": [15, 31, 63, 100],\n",
+    "}\n",
+    "\n",
     "\n",
     "hgb = HistGradientBoostingClassifier(\n",
     "    random_state=RANDOM_STATE,\n",
     "    early_stopping=True\n",
     ")\n",
     "\n",
-    "hgb_grid = {\n",
-    "    \"learning_rate\": [0.03, 0.05, 0.1, 0.15, 0.01],\n",
-    "    \"max_depth\": [2, 3, None, 5, 10],\n",
-    "    \"max_leaf_nodes\": [15, 31, 63, 100],\n",
-    "}\n",
     "\n",
-    "hgb_search = run_search(\"HistGradientBoosting\", hgb, hgb_grid)\n",
+    "hgb_search = run_search(\"HistGradientBoosting\", hgb, hgb_params)\n",
     "search_summaries[\"HistGradientBoosting\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "b06f20c3-eaa5-4648-8217-46ee34dd7b2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Dummy(most_frequent)': DummyClassifier(random_state=42, strategy='most_frequent'),\n",
+       " 'LogReg(scaled)': Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('lr',\n",
+       "                  LogisticRegression(C=5, max_iter=4000, random_state=42))]),\n",
+       " 'DecisionTree': DecisionTreeClassifier(max_depth=10, min_samples_leaf=25, random_state=42),\n",
+       " 'RandomForest': RandomForestClassifier(max_depth=20, n_estimators=600, n_jobs=-1,\n",
+       "                        random_state=42),\n",
+       " 'HistGradientBoosting': HistGradientBoostingClassifier(early_stopping=True, learning_rate=0.15,\n",
+       "                                max_leaf_nodes=63, random_state=42)}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "0a74b907-a1a8-4fa3-83c1-a85f30a65819",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stacking\n",
+      "accuracy = 0.9151\n",
+      "f1       = 0.8873\n",
+      "roc_auc  = 0.9342\n"
+     ]
+    }
+   ],
    "source": [
     "# Stacking: ансамбль из нескольких уже обученных моделей + метамодель.\n",
     "\n",
@@ -965,12 +1052,12 @@
     "\n",
     "stack.fit(X_train, y_train)\n",
     "best_models[\"Stacking\"] = stack\n",
-    "results.append(evaluate_on_test(stack, X_test, y_test, \"Stacking\"))"
+    "results[\"Stacking\"] = (evaluate_on_test(stack, X_test, y_test, \"Stacking\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "bdcf271a-36d7-46d1-ad84-0e64d31ab328",
    "metadata": {},
    "outputs": [
@@ -998,67 +1085,60 @@
        "      <th>accuracy</th>\n",
        "      <th>f1</th>\n",
        "      <th>roc_auc</th>\n",
-       "      <th>model</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>Stacking</th>\n",
        "      <td>0.915111</td>\n",
-       "      <td>0.831272</td>\n",
+       "      <td>0.887281</td>\n",
        "      <td>0.934230</td>\n",
-       "      <td>Stacking</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>HistGradientBoosting</th>\n",
        "      <td>0.908444</td>\n",
-       "      <td>0.810313</td>\n",
+       "      <td>0.874987</td>\n",
        "      <td>0.931756</td>\n",
-       "      <td>HistGradientBoosting</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>RandomForest</th>\n",
        "      <td>0.892222</td>\n",
-       "      <td>0.759305</td>\n",
+       "      <td>0.844935</td>\n",
        "      <td>0.930128</td>\n",
-       "      <td>RandomForest</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>DecisionTree</th>\n",
        "      <td>0.829556</td>\n",
-       "      <td>0.648649</td>\n",
+       "      <td>0.768068</td>\n",
        "      <td>0.841916</td>\n",
-       "      <td>DecisionTree</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>LogReg(scaled)</th>\n",
        "      <td>0.816222</td>\n",
-       "      <td>0.571724</td>\n",
+       "      <td>0.727367</td>\n",
        "      <td>0.800894</td>\n",
-       "      <td>LogReg(scaled)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>Dummy(most_frequent)</th>\n",
        "      <td>0.737333</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.424405</td>\n",
        "      <td>0.500000</td>\n",
-       "      <td>Dummy(most_frequent)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   accuracy        f1   roc_auc                 model\n",
-       "5  0.915111  0.831272  0.934230              Stacking\n",
-       "4  0.908444  0.810313  0.931756  HistGradientBoosting\n",
-       "3  0.892222  0.759305  0.930128          RandomForest\n",
-       "2  0.829556  0.648649  0.841916          DecisionTree\n",
-       "1  0.816222  0.571724  0.800894        LogReg(scaled)\n",
-       "0  0.737333  0.000000  0.500000  Dummy(most_frequent)"
+       "                      accuracy        f1   roc_auc\n",
+       "Stacking              0.915111  0.887281  0.934230\n",
+       "HistGradientBoosting  0.908444  0.874987  0.931756\n",
+       "RandomForest          0.892222  0.844935  0.930128\n",
+       "DecisionTree          0.829556  0.768068  0.841916\n",
+       "LogReg(scaled)        0.816222  0.727367  0.800894\n",
+       "Dummy(most_frequent)  0.737333  0.424405  0.500000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,15 +1148,14 @@
     "df_res_info = pd.DataFrame(results)\n",
     "\n",
     "df_sorted = df_res_info.copy()\n",
-    "df_sorted[\"roc_auc_sort\"] = df_sorted[\"roc_auc\"].fillna(-1.0)\n",
-    "df_sorted = df_sorted.sort_values([\"roc_auc_sort\", \"accuracy\"], ascending=False).drop(columns=[\"roc_auc_sort\"])\n",
-    "\n",
+    "df_models = df_sorted.T \n",
+    "df_sorted = df_models.sort_values('roc_auc', ascending=False)\n",
     "df_sorted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "45fdd444-20d2-48be-ba72-eff3974be6b1",
    "metadata": {},
    "outputs": [],
@@ -1086,13 +1165,13 @@
     "metrics_path = ARTIFACTS_DIR / \"metrics_test.json\"\n",
     "search_path = ARTIFACTS_DIR / \"search_summaries.json\"\n",
     "\n",
-    "save_json({\"results\": df_sorted.to_dict(orient=\"records\")}, metrics_path)\n",
+    "save_json(results, metrics_path)\n",
     "save_json(search_summaries, search_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "cb6cf087-6759-4df0-9e48-2e06e98b47a8",
    "metadata": {},
    "outputs": [],
@@ -1100,13 +1179,13 @@
     "# Выбор “лучшей” модели по таблице результатов\n",
     "\n",
     "best_row = df_sorted.iloc[0]\n",
-    "best_label = best_row[\"model\"]\n",
-    "best_model = best_models[best_label]"
+    "best_m_name = df_sorted.index[0]\n",
+    "best_model = best_models[best_m_name]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "6e7db653-a337-40bf-a830-d64e645be578",
    "metadata": {},
    "outputs": [
@@ -1133,13 +1212,13 @@
    ],
    "source": [
     "y_pred = best_model.predict(X_test)\n",
-    "plot_confusion(y_test, y_pred, title=f\"{best_label} – confusion matrix (test)\", file_name=f\"{best_label}ConfusionMat\")\n",
-    "plot_roc(best_model, X_test, y_test, title=f\"{best_label} – ROC (test)\", file_name=f\"{best_label}ROC\")"
+    "plot_confusion(y_test, y_pred, title=f\"{best_m_name} – confusion matrix (test)\", file_name=f\"{best_m_name}ConfusionMat\")\n",
+    "plot_roc(best_model, X_test, y_test, title=f\"{best_m_name} – ROC (test)\", file_name=f\"{best_m_name}ROC\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "5534f355-0f2e-4709-9636-a0043b0ae744",
    "metadata": {},
    "outputs": [
@@ -1175,14 +1254,14 @@
     "plt.bar(range(len(idx)), imp[idx])\n",
     "plt.xticks(range(len(idx)), [feature_names[i] for i in idx], rotation=60, ha=\"right\")\n",
     "plt.ylabel(f\"mean importance ({scoring} drop)\")\n",
-    "plt.title(f\"{best_label}: permutation importance (top-15)\")\n",
+    "plt.title(f\"{best_m_name}: permutation importance (top-15)\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "edaa0bd4-9e8a-430a-a519-e8087229484c",
    "metadata": {},
    "outputs": [],
@@ -1190,10 +1269,10 @@
     "model_path = ARTIFACTS_DIR / \"best_model.joblib\"\n",
     "joblib.dump(best_model, model_path)\n",
     "\n",
-    "meta = {\n",
-    "    \"best_model_label\": best_label,\n",
+    "meta = {}\n",
+    "meta[best_m_name] = {\n",
     "    \"test_metrics\": best_row.to_dict(),\n",
-    "    \"search_summary\": search_summaries.get(best_label, None),\n",
+    "    \"search_summary\": search_summaries.get(best_m_name, None),\n",
     "    \"random_state\": RANDOM_STATE,\n",
     "}\n",
     "save_json(meta, ARTIFACTS_DIR / \"best_model_meta.json\")"
